--- a/description.html
+++ b/description.html
@@ -12,7 +12,8 @@
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://beyzamucahid.github.io/" />
   <meta name="twitter:card" content="summary_large_image" />
-
+  
+  <link rel="icon" href="https://beyzamucahid.github.io/static/img/cover.png" type="image/png" />
   <style>
     /* Genel stil */
     body {
