--- a/index.html
+++ b/index.html
@@ -3,16 +3,14 @@
 <head>
   <meta charset="UTF-8" />
   <title>Beyza & Mucahid Wedding</title>
-  <meta property="og:title" content="Beyza & Mucahid Wedding" />
-  <meta property="og:description" content="Bir ömür diye çıktığımız bu yolda sizlerin de bize eşlik etmesinden mutluluk duyarız..." />
+  <meta property="og:title" content="Beyza & Mucahid Dugun Davetiyesi" />
+  <meta property="og:description" content="Bir ömür diye çıktığımız bu yolda sizlerin de bize eşlik etmenizden mutluluk duyarız..." />
   <meta property="og:image" content="https://beyzamucahid.github.io/static/img/cover.png" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://beyzamucahid.github.io/" />
   <meta name="twitter:card" content="summary_large_image" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" />
-
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <link rel="icon" href="https://beyzamucahid.github.io/static/img/cover.png" type="image/png" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
   <style>
     html, body {
@@ -21,19 +19,16 @@
       background: #f6f5f4;
       font-family: Arial, sans-serif;
       color: #333;
-      height: 100%;
-      width: 100%;
-      overflow: hidden;
     }
 
     nav {
-      position: fixed;
-      top: 0; left: 0;
+      position: sticky;
+      top: 0;
       width: 100%;
       background-color: #f6f5f4;
       padding: 15px 0;
       text-align: center;
-      z-index: 9999;
+      z-index: 999;
       border-bottom: 2px solid #6F4F33;
       display: flex;
       justify-content: center;
@@ -67,116 +62,39 @@
       text-align: center;
     }
 
-    nav a:first-child {
-      transform: perspective(100px) rotateY(-5deg);
-      padding-right: 25px;
-    }
-
-    nav a:last-child {
-      transform: perspective(100px) rotateY(5deg);
-      padding-left: 25px;
-    }
-
     nav a:hover {
       color: #8C5A3C;
     }
 
-    .swiper {
-      width: 100%;
-      height: calc(100vh - 70px);
-      margin-top: 70px;
-    }
-
-    .swiper-slide {
-      width: 100%;
-      height: 100%;
+    .content {
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      background-color: #f6f5f4;
-      position: relative;
-      padding: 20px 0;
-      box-sizing: border-box;
+      padding: 80px 0 40px;
     }
 
     .image-container {
-      flex: 1;
-      display: flex;
-      justify-content: center;
-      align-items: center;
       width: 100%;
-      padding: 20px;
-      box-sizing: border-box;
+      max-width: 800px;
+      margin: 20px auto;
+      padding: 0 10px;
     }
 
-    .swiper-slide img {
-      max-width: 100%;
-      max-height: calc(80vh - 50px);
+    .image-container img {
+      width: 100%;
+      height: auto;
       object-fit: contain;
-      user-select: none;
-      -webkit-user-drag: none;
-    }
-
-    .swiper-pagination-bullet {
-      background: #6F4F33;
-    }
-
-    .scroll-down-icon {
-      position: fixed;
-      bottom: 20px;
-      left: 50%;
-      transform: translateX(-50%);
-      animation: bounceDown 2s infinite;
-      z-index: 10000;
-      pointer-events: none;
-    }
-
-    .scroll-down-icon svg {
-      transition: transform 0.3s;
-    }
-
-    @keyframes bounceDown {
-      0%, 100% { transform: translateX(-50%) translateY(0); opacity: 0.8; }
-      50% { transform: translateX(-50%) translateY(10px); opacity: 1; }
+      touch-action: manipulation;
     }
 
     @media (max-width: 768px) {
-      nav { padding: 12px 0; }
       nav a { font-size: 16px; }
-      nav a:first-child { padding-right: 20px; }
-      nav a:last-child { padding-left: 20px; }
       .nav-divider { height: 50%; }
-      .swiper-slide img { max-height: calc(70vh - 50px); }
-      .scroll-down-icon { bottom: 15px; }
-
-      /* Mobil için: üst hizalama ve boyutu sabitle */
-      .swiper-slide {
-        justify-content: flex-start;
-        align-items: flex-start;
-      }
-
-      .image-container {
-        flex: none;
-        justify-content: center;
-        align-items: flex-start;
-        padding-top: 30px;
-      }
     }
 
     @media (max-width: 480px) {
       nav a { font-size: 14px; }
-      nav a:first-child { padding-right: 15px; }
-      nav a:last-child { padding-left: 15px; }
       .nav-divider { height: 40%; }
-      .swiper-slide img { max-height: calc(60vh - 50px); }
-      .scroll-down-icon { bottom: 10px; }
-    }
-
-    @media (min-width: 769px) {
-      .scroll-down-icon {
-        display: none;
-      }
     }
   </style>
 </head>
@@ -191,66 +109,19 @@
     </div>
   </nav>
 
-  <!-- Scroll Down Icon -->
-  <div class="scroll-down-icon" id="scrollIcon">
-    <svg id="scrollArrow" width="32" height="32" viewBox="0 0 24 24" fill="none" stroke="#6F4F33" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
-      <path d="M12 5v14" />
-      <path d="M19 12l-7 7-7-7" />
-    </svg>
-  </div>
-
-  <!-- Swiper -->
-  <div class="swiper">
-    <div class="swiper-wrapper">
-
-      <!-- Slide 1 -->
-      <div class="swiper-slide">
-        <div class="image-container">
-          <img src="https://beyzamucahid.github.io/static/img/cover.png" alt="Görsel 1" />
-        </div>
-      </div>
-
-      <!-- Slide 2 -->
-      <div class="swiper-slide">
-        <div class="image-container">
-          <img src="https://beyzamucahid.github.io/static/img/cover2.png" alt="Görsel 2" />
-        </div>
-      </div>
-
+  <!-- Content -->
+  <div class="content">
+    <div class="image-container">
+      <img src="https://beyzamucahid.github.io/static/img/cover.png" alt="Görsel 1">
     </div>
-    <div class="swiper-pagination"></div>
+    <div class="image-container">
+      <img src="https://beyzamucahid.github.io/static/img/cover2.png" alt="Görsel 2">
+    </div>
   </div>
-
-  <!-- Swiper JS -->
-  <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-  <script>
-    const swiper = new Swiper('.swiper', {
-      direction: 'vertical',
-      loop: false,
-      pagination: {
-        el: '.swiper-pagination',
-        clickable: true
-      },
-      mousewheel: true,
-      keyboard: true
-    });
-
-    const arrow = document.getElementById("scrollArrow");
-    swiper.on('slideChange', () => {
-      const isLast = swiper.activeIndex === swiper.slides.length - 1;
-
-      if (!isLast) {
-        arrow.innerHTML = `
-          <path d="M12 5v14" />
-          <path d="M19 12l-7 7-7-7" />
-        `;
-      } else {
-        arrow.innerHTML = `
-          <path d="M12 19V5" />
-          <path d="M5 12l7-7 7 7" />
-        `;
-      }
-    });
-  </script>
+  <div class="nav-links image-container">
+    <a href="https://beyzamucahid.github.io/description" target="_blank" rel="noopener noreferrer">Katılım için tıklayınız.</a>
+  </div>
+<!--</div>-->
+<br>
 </body>
 </html>
