--- a/description.html
+++ b/description.html
@@ -210,7 +210,7 @@
       <div class="event-details">
         <p><strong>Yer:</strong> Risus Wedding</p>
         <p><strong>Tarih:</strong> 02.08.2025 Cumartesi - 19:00</p>
-        <p><strong>Adres:</strong> İncek Mahallesi, Turgut Özal Blv. No:66, İncek/Ankara</p>
+        <p><strong>Adres:</strong><a href="https://maps.app.goo.gl/REg7P5d7hVquqYeT9" target="_blank" rel="noopener noreferrer"> İncek Mahallesi, Turgut Özal Blv. No:66, İncek/Ankara</a></p>
         <p><a href="https://forms.gle/XoLKGpewkzDzoxCW8" target="_blank" rel="noopener noreferrer"><strong>Katılım için tıklayınız.</strong></a></p>
       </div>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3065.3016006380294!2d32.693887376629874!3d39.80022607154545!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14d33f4582345737%3A0xc858826a023352a6!2sRisus%20Wedding!5e0!3m2!1sen!2str!4v1751758783581!5m2!1sen!2str" loading="lazy"></iframe>
@@ -222,7 +222,7 @@
       <div class="event-details">
         <p><strong>Yer:</strong> Malatya Şehr-i Davet</p>
         <p><strong>Tarih:</strong> 09.08.2025 Cumartesi - 19:30</p>
-        <p><strong>Adres:</strong> Kuzey Çevre Yolu Kavşağı, Sivas Yolu 7.Km, Yeşilyurt/Malatya</p>
+        <p><strong>Adres:</strong><a href="https://maps.app.goo.gl/ArPeL3BjABfN5pVT8" target="_blank" rel="noopener noreferrer"> Kuzey Çevre Yolu Kavşağı, Sivas Yolu 7.Km, Yeşilyurt/Malatya</a></p>
         <p><a href="https://forms.gle/XoLKGpewkzDzoxCW8" target="_blank" rel="noopener noreferrer"><strong>Katılım için tıklayınız.</strong></a></p>
       </div>
       <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3126.727357613154!2d38.22104927657524!3d38.4015525718341!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4077cb61008be22f%3A0xa6eac2e98e516dc7!2sMalatya%20%C5%9Eehr-i%20Davet!5e0!3m2!1sen!2str!4v1751760439419!5m2!1sen!2str" loading="lazy"></iframe>
